--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
         "build": "tsc",
-        "postinstall": "npm run build"
+        "postinstall": "npm run build",
+        "start": "node build/index.js"
     },
     "keywords": [],
     "author": "",
