--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "./build/index.js",
+    "plugins":[""],
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
@@ -14,6 +15,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "babel-plugin-transform-remove-console": "^6.9.4",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
@@ -28,13 +30,13 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^18.0.0",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^4.7.3",
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
         "eslint": "^8.18.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^4.7.3"
     }
 }
