--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "./build/index.js",
-    "plugins":[""],
+    "plugins": [
+        ""
+    ],
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
